2009-07-09  Peter Bloomfield

	* src/message-window.c (mw_expunged_cb): check for NULL message.

2009-07-09  Peter Bloomfield

	* libbalsa/mailbox_mbox.c (libbalsa_mailbox_mbox_sync): check
	for error in GMimeParser.

2009-06-30  Peter Bloomfield

	* configure.in: test for res_init.
	* libbalsa/imap/imap-handle.c (imap_socket_open): use it to
	recover faster after reconnecting to the internet.

2009-06-27  Peter Bloomfield

	* src/spell-check.h: build --without-gtkspell.

2006-06-24  Pawel Salek

	* libbalsa/imap/imap-{commands,handle}.c: catch errors early on
	for more accurate error messages.
	* libbalsa/imap/imap_search.c: ditto.
	* libbalsa/imap/imap-handle.h: warn if idle_disable's result is ignored.
	* libbalsa/mailbox_imap.c: correct tranformation of rfc822 groups
	from ImapAddress to InternetAddress (together with Peter B).
	* src/sendmsg-window.c: check that string is not-null before
	setting window title.

2006-06-11  Pawel Salek

	* libbalsa/mailbox_imap.c: do not create empty address lists.
	This makes the message compose code believe that reply-to is set.

2009-06-07  Peter Bloomfield

	Build with threads disabled

	* libbalsa/mailbox.c (lbm_msgno_changed): fix conditional code.

2009-06-07  Peter Bloomfield

	Update display in an idle callback.

	* libbalsa/mailbox.h: new array of msgnos that have changed.
	* libbalsa/mailbox.c (libbalsa_mailbox_finalize),
	(lbm_msgno_changed_expunged_cb), (lbm_msgnos_changed_idle_cb),
	(lbm_msgno_changed), (libbalsa_mailbox_msgno_changed),
	(lbm_get_index_entry_real): use it to update display in an idle
	callback, instead of in the sub-thread in which the message info
	was set up.

2009-06-07  Peter Bloomfield

	* src/sendmsg-window.c (repl_identity_signature),
	(insert_initial_sig): remember cursor position when adding or
	changing signature.

2009-06-03  Peter Bloomfield

	Build with threads disabled

	* configure.in: must enable threads to use WebKit.
	* libbalsa/imap-server.c (libbalsa_imap_server_set_username),